merubah footer index menjadi warna biru

--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
 
         <!-- footer -->
         <div class="container-footer">
-        <h1 class="h1-footeer" style="color: white;"> website ini dibuat dari cuy university </h1>
+        <h1 class="h1-footeer" style="color: blue;"> website ini dibuat dari cuy university </h1>
         </div>
         <!-- footer end -->
         </div>
